jinfer: rewrite CLI guide